<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ll_summary"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:baselineAligned="false"
        android:paddingStart="16dp"
        android:paddingTop="30dp"
        android:paddingEnd="16dp"
        android:paddingBottom="30dp" />

    <RelativeLayout
        android:id="@+id/rl_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vw_today_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/home_today"
            android:textSize="14sp" />


        <View
            android:id="@+id/vw_today_today"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_below="@id/vw_today_revenue"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius_bg" />
    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/summary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_summary"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vw_week_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_last_7_days"
                    android:textSize="14sp" />


                <View
                    android:layout_width="60dp"
                    android:layout_height="27dp"
                    android:layout_below="@id/vw_week_revenue"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_radius_bg" />

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vw_month_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_last_30_days"
                    android:textSize="14sp" />


                <View
                    android:id="@+id/vw_revenue_month"
                    android:layout_width="60dp"
                    android:layout_height="27dp"
                    android:layout_below="@id/vw_month_revenue"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_radius_bg" />

            </RelativeLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <RelativeLayout
        android:id="@+id/rv_daily_revenue"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/summary_card"
        android:layout_marginBottom="8dp"

        >

        <TextView
            android:id="@+id/tx_chart_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/home_revenue_last_7_days"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp">

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />

            <View
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_bg" />
        </LinearLayout>


    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/rv_daily_revenue" />


    <RelativeLayout
        android:id="@+id/rl_networks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_networks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/home_networks"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx_networks"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingBottom="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="140dp"
                android:layout_height="90dp"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <View
                        android:layout_width="70dp"
                        android:layout_height="15dp"
                        android:background="@drawable/border_radius_bg" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="25dp"

                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_radius_bg" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_marginLeft="16dp"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <View
                        android:layout_width="70dp"
                        android:layout_height="15dp"
                        android:background="@drawable/border_radius_bg" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="25dp"

                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_radius_bg" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
